@@ -7,6 +7,7 @@ import guru.springframework.spring7restmvc.model.BeerStyle;
 import guru.springframework.spring7restmvc.repositories.BeerRepository;
 import org.hamcrest.core.IsNull;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -29,6 +30,8 @@ import java.util.UUID;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.core.Is.is;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.httpBasic;
+import static org.springframework.security.test.web.servlet.setup.SecurityMockMvcConfigurers.springSecurity;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
@@ -58,7 +61,9 @@ class BeerControllerIT {
 
   @BeforeEach
   void setUp() {
-    mockMvc = MockMvcBuilders.webAppContextSetup(wac).build();
+    mockMvc = MockMvcBuilders.webAppContextSetup(wac)
+      .apply(springSecurity())
+      .build();
   }
 
   // @Disabled // just for demo purposes
@@ -71,6 +76,7 @@ class BeerControllerIT {
     beerDTO.setBeerName("Updated Name");
 
     MvcResult result = mockMvc.perform(put(BeerController.BEER_PATH_ID, beer.getId())
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .contentType(MediaType.APPLICATION_JSON)
         .accept(MediaType.APPLICATION_JSON)
         .content(objectMapper.writeValueAsString(beerDTO)))
@@ -82,6 +88,7 @@ class BeerControllerIT {
     beerDTO.setBeerName("Updated Name 2");
 
     MvcResult result2 = mockMvc.perform(put(BeerController.BEER_PATH_ID, beer.getId())
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .contentType(MediaType.APPLICATION_JSON)
         .accept(MediaType.APPLICATION_JSON)
         .content(objectMapper.writeValueAsString(beerDTO)))
@@ -92,8 +99,9 @@ class BeerControllerIT {
   }
 
   @Test
-  void testListBeersByStyleAndNameShowInventoryTruePage2() throws Exception {
+  void tesListBeersByStyleAndNameShowInventoryTruePage2() throws Exception {
     mockMvc.perform(get(BeerController.BEER_PATH)
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .queryParam("beerName", "IPA")
         .queryParam("beerStyle", BeerStyle.IPA.name())
         .queryParam("showInventory", "true")
@@ -107,6 +115,7 @@ class BeerControllerIT {
   @Test
   void tesListBeersByStyleAndNameShowInventoryTrue() throws Exception {
     mockMvc.perform(get(BeerController.BEER_PATH)
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .queryParam("beerName", "IPA")
         .queryParam("beerStyle", BeerStyle.IPA.name())
         .queryParam("showInventory", "true")
@@ -119,6 +128,7 @@ class BeerControllerIT {
   @Test
   void tesListBeersByStyleAndNameShowInventoryFalse() throws Exception {
     mockMvc.perform(get(BeerController.BEER_PATH)
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .queryParam("beerName", "IPA")
         .queryParam("beerStyle", BeerStyle.IPA.name())
         .queryParam("showInventory", "false")
@@ -131,6 +141,7 @@ class BeerControllerIT {
   @Test
   void tesListBeersByStyleAndName() throws Exception {
     mockMvc.perform(get(BeerController.BEER_PATH)
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .queryParam("beerName", "IPA")
         .queryParam("beerStyle", BeerStyle.IPA.name())
         .queryParam("pageSize", "800"))
@@ -141,6 +152,7 @@ class BeerControllerIT {
   @Test
   void tesListBeersByStyle() throws Exception {
     mockMvc.perform(get(BeerController.BEER_PATH)
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .queryParam("beerStyle", BeerStyle.IPA.name())
         .queryParam("pageSize", "800"))
       .andExpect(status().isOk())
@@ -150,6 +162,7 @@ class BeerControllerIT {
   @Test
   void tesListBeersByName() throws Exception {
     mockMvc.perform(get(BeerController.BEER_PATH)
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .queryParam("beerName", "IPA")
         .queryParam("pageSize", "800"))
       .andExpect(status().isOk())
@@ -158,33 +171,32 @@ class BeerControllerIT {
 
   @Test
   void testPatchBeerBadName() throws Exception {
-    Beer beer = beerRepository.findAll().getFirst();
+    Beer beer = beerRepository.findAll().get(0);
 
     Map<String, Object> beerMap = new HashMap<>();
-    beerMap.put("beerName", "New Name 1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890");
+    beerMap.put("beerName", "New Name 123456789012345678901234567890123456789012345678901234567890123456789012345670");
 
-    MvcResult result = mockMvc.perform(patch(BeerController.BEER_PATH_ID, beer.getId())
+    mockMvc.perform(patch(BeerController.BEER_PATH_ID, beer.getId())
+        .with(httpBasic(BeerControllerTest.USERNAME, BeerControllerTest.PASSWORD))
         .contentType(MediaType.APPLICATION_JSON)
         .accept(MediaType.APPLICATION_JSON)
         .content(objectMapper.writeValueAsString(beerMap)))
-      .andExpect(status().isBadRequest())
-      .andExpect(jsonPath("$.length()", is(1)))
-      .andReturn();
-
-    System.out.println(result.getResponse().getContentAsString());
+      .andExpect(status().isBadRequest());
 
   }
 
   @Test
   void testDeleteByIDNotFound() {
-    assertThrows(NotFoundException.class, () -> beerController.deleteById(UUID.randomUUID()));
+    assertThrows(NotFoundException.class, () -> {
+      beerController.deleteById(UUID.randomUUID());
+    });
   }
 
   @Rollback
   @Transactional
   @Test
   void deleteByIdFound() {
-    Beer beer = beerRepository.findAll().getFirst();
+    Beer beer = beerRepository.findAll().get(0);
 
     ResponseEntity responseEntity = beerController.deleteById(beer.getId());
     assertThat(responseEntity.getStatusCode()).isEqualTo(HttpStatusCode.valueOf(204));
@@ -194,14 +206,16 @@ class BeerControllerIT {
 
   @Test
   void testUpdateNotFound() {
-    assertThrows(NotFoundException.class, () -> beerController.updateById(UUID.randomUUID(), BeerDTO.builder().build()));
+    assertThrows(NotFoundException.class, () -> {
+      beerController.updateById(UUID.randomUUID(), BeerDTO.builder().build());
+    });
   }
 
   @Rollback
   @Transactional
   @Test
   void updateExistingBeer() {
-    Beer beer = beerRepository.findAll().getFirst();
+    Beer beer = beerRepository.findAll().get(0);
     BeerDTO beerDTO = beerMapper.beerToBeerDto(beer);
     beerDTO.setId(null);
     beerDTO.setVersion(null);
@@ -229,7 +243,7 @@ class BeerControllerIT {
     assertThat(responseEntity.getHeaders().getLocation()).isNotNull();
 
     String[] locationUUID = responseEntity.getHeaders().getLocation().getPath().split("/");
-    UUID savedUUID = UUID.fromString(locationUUID[ 4 ]);
+    UUID savedUUID = UUID.fromString(locationUUID[4]);
 
     Beer beer = beerRepository.findById(savedUUID).get();
     assertThat(beer).isNotNull();
@@ -237,19 +251,24 @@ class BeerControllerIT {
 
   @Test
   void testBeerIdNotFound() {
-    assertThrows(NotFoundException.class, () -> beerController.getBeerById(UUID.randomUUID()));
+    assertThrows(NotFoundException.class, () -> {
+      beerController.getBeerById(UUID.randomUUID());
+    });
   }
 
   @Test
   void testGetById() {
-    Beer beer = beerRepository.findAll().getFirst();
+    Beer beer = beerRepository.findAll().get(0);
+
     BeerDTO dto = beerController.getBeerById(beer.getId());
+
     assertThat(dto).isNotNull();
   }
 
   @Test
   void testListBeers() {
     Page<BeerDTO> dtos = beerController.listBeers(null, null, false, 1, 2413);
+
     assertThat(dtos.getContent().size()).isEqualTo(1000);
   }
 
